--- a/m/sub/screen/ingame1.html
+++ b/m/sub/screen/ingame1.html
@@ -138,23 +138,24 @@
                 <div class="practice_info_wrap">
                     <dl>
                         <dt>1</dt>
-                        <dd>노출방식 및 시간<br /><span>스코어보드 이미지 3초 +<b>동영상 6초</b> +로딩창 이미지 1초</span></dd>
+                        <dt>1</dt>
+                        <dd>노출방식 및 시간<br /><span>스코어보드 이미지 3초<br /><b>+동영상 6초</b><br />+로딩창 이미지 1초</span></dd>
                     </dl>
                     <dl>
                         <dt>2</dt>
-                        <dd>노출시점<br /><span>2, 5, 8, 12, 14, 16번 홀 이동시</span></dd>
+                        <dd>노출시점<br /><span>2, 4, 6, 8, 12, 14, 16, 18<br />홀 이동시(짝수홀 중 1개 홀)</span></dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>노출확률 (판매방식)<br /><span>1개홀 독점</span></dd>
+                        <dd>노출확률 (판매방식)<br /><span>각 홀 코스그룹별 독점<br>(50% 확정 노출)</span></dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 450만회</span></dd>
+                        <dd>노출량<br /><span>350만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 1,500만원 / 4주(1개월) : 2,700만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                     </dl>
                 </div>
             </div>
