--- a/m/sub/screen/ingame2.html
+++ b/m/sub/screen/ingame2.html
@@ -137,24 +137,24 @@
                 </div>
                 <div class="practice_info_wrap">
                     <dl>
-                        <dt>1</dt>
-                        <dd>노출방식 및 시간<br /><span>스코어보드 이미지 3초<br />+<b>로딩창 이미지 5초</b></span></dd>
-                    </dl>
-                    <dl>
-                        <dt>2</dt>
-                        <dd>노출시점<br /><span>3, 4, 6, 7, 9, 11, 13번 / 15, 17, 18번홀 이동시</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>3</dt>
-                        <dd>노출확률 (판매방식)<br /><span>1개홀 독점</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 450만회</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>5</dt>
-                        <dd>단가<br /><span>2주 1,400만원 / 4주(1개월) : 2,500만원</span></dd>
+                    <dt>1</dt>
+                    <dd>노출방식 및 시간<br /><span>스코어보드 이미지 3초<br />+ <b>로딩창 이미지 5초</b></span></dd>
+                </dl>
+                <dl>
+                    <dt>2</dt>
+                    <dd>노출시점<br /><span>1, 3, 5, 7, 11, 13, 15, 17<br />홀 이동시(홀수홀 중 1개 홀)</span></dd>
+                </dl>
+                <dl>
+                    <dt>3</dt>
+                    <dd>노출확률 (판매방식)<br /><span>각 홀 코스그룹별 독점<br>(50% 확정 노출)</span></dd>
+                </dl>
+                <dl>
+                    <dt>4</dt>
+                    <dd>노출량<br /><span>350만회</span></dd>
+                </dl>
+                <dl>
+                    <dt>5</dt>
+                    <dd>단가<br /><span>1개월 : 1,600만원</span></dd>
                     </dl>
                 </div>
             </div>
