--- a/m/sub/screen/ingame3.html
+++ b/m/sub/screen/ingame3.html
@@ -142,7 +142,7 @@
                     </dl>
                     <dl>
                         <dt>2</dt>
-                        <dd>노출시점<br /><span>플레이 중 PAR 스코어 이상 기록시 상시</span></dd>
+                        <dd>노출시점<br /><span>PAR 스코어 이상 기록으로 <br>홀아웃시 상시</span></dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
@@ -150,11 +150,11 @@
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 410만회</span></dd>
+                        <dd>노출량<br /><span>700만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 800만원 / 4주(1개월) : 1,500만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                     </dl>
                 </div>
             </div>
