--- a/m/sub/screen/ingame.html
+++ b/m/sub/screen/ingame.html
@@ -142,28 +142,29 @@
                     </dl>
                     <dl>
                         <dt>2</dt>
-                        <dd>노출시점<br /><span>1홀(전반 첫 홀)입장시, 10홀(후반 첫 홀)입장 시</span></dd>
+                        <dd>노출시점<br /><span>[1홀 입장시 1-1 or 1-2] or <br>[10홀 입장시 10-1 or 10-2]</span></dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>노출확률 (판매방식)<br /><span>코스그룹별 독점(A~C 그룹)</span></dd>
+                        <dd>노출확률 (판매방식)<br /><span>각 코스그룹별 독점 <br>(25% 확정 노출)</span></dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 160만회</span></dd>
+                        <dd>노출량<br /><span>175만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 1,900만원 / 4주(1개월) : 3,500만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 3,200만원</span></dd>
                     </dl>
                 </div>
                 <div class="game_info_wrap">
                     <ul>
-                        <li><span>특정 CC 독점 노출 (A그룹) : </span><br />스카이뷰, 중부, 클럽디금강, 엠스클럽의성,<br />해비치-남양주 등</li>
-                        <li><span>특정 CC 독점 노출 (B그룹) : </span><br />라싸, 더골프클럽, 하이원, 양산, 용평버치힐,<br />세인트포, 로얄포레 등</li>
-                        <li><span>특정 CC 독점 노출 (C그룹) : </span><br />360도, 샤인데일, 젠스필드, 인터불고경산,<br />사우스스프링스, 남춘천 등</li>
+                        <li><span>특정 CC 독점 노출 (A그룹) : </span>스카이뷰, 해비치-남양주, 양산, 블랙스톤 벨포레</li>
+                        <li><span>특정 CC 독점 노출 (B그룹) : </span>하이원, 옥스필드, 부산, 로얄포레</li>
+                        <li><span>특정 CC 독점 노출 (C그룹) : </span>에덴벨리, 한탄강, 청우, 동원썬밸리</li>
+                        <li><span>특정 CC 독점 노출 (D그룹) : </span>스프링데일, 내장산, 태인, 이스트힐</li>
                     </ul>
-                    <p>*A,B,C그룹 순서는 중요도나 우선순위 무관하게 각 33.3%의 점유율</p>
+                    <p>*A,B,C,D그룹 순서는 중요도나 우선순위와 무관하게 각 25.0%의 점유율</p>
                 </div>
                 <h3>광고 노출 구간</h3>
                 <div><img src="../../images/sub/img_sub_game_info.png" alt="광고 노출 구간" /></div>
