--- a/m/sub/screen/ingame4.html
+++ b/m/sub/screen/ingame4.html
@@ -142,19 +142,19 @@
                     </dl>
                     <dl>
                         <dt>2</dt>
-                        <dd>노출시점<br /><span>플레이 중 오잘공, 리플레이 영상,<br />오늘의 나스모 기록시 상시</span></dd>
+                        <dd>노출시점<br /><span>오잘공, 리플레이, <br>오늘의 나스모 기록시 상시</span></dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>노출확률 (판매방식)<br /><span>25%(4구좌 롤링)</span></dd>
+                        <dd>노출확률 (판매방식)<br /><span>5구좌 롤링<br>(20% 확률 노출)</span></dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 4,500만회</span></dd>
+                        <dd>노출량<br /><span>7,000만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 1,100만원 / 4주(1개월) : 2,000만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                     </dl>
                 </div>
             </div>
